--- a/album.html
+++ b/album.html
@@ -12,7 +12,7 @@
 			<div class="box c1"> </div>
 			<div class="box c2">
 				<a href="tm.html" class="a">
-					<img src="image/tm2.png"/>
+					<img src="image/tm.jpg"/>
 				</a>
 			</div>
 			<div class="box c3"> </div>
