--- a/tm.html
+++ b/tm.html
@@ -14,7 +14,7 @@
 	<h1>The Marathon</h1>
 	</div>
 	<div class="rightr" onclick="on(this)">
-	
+	<audio src="audio/bluelaces.mp3" id="blue"></audio>
 	<p>
 	Im from Westside California, they run up on ya
 Ask you where you from and check yo tats under yo clothin'
